# palantir

./: CLAUDE.md  README.md  feeds.toml  pyproject.toml
src/palantir/: __main__.py  app.py  config.py  fetcher.py  highlight.py  summarize.py
