[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "palantir"
version = "0.1.0"
description = "CLI news reader"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.70.0",
    "feedparser>=6.0.0",
    "httpx>=0.27.0",
    "trafilatura>=1.12.0",
]

[project.scripts]
palantir = "palantir.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/palantir"]
